solved conflicts, adjusted servlet concurrency